# HumiditySensorAWS

./: .gitignore  CMakeLists.txt  platformio.ini
src/: CMakeLists.txt  main.c  main.cpp
